src/generated/PolicyParser.ts
// Generated from Policy.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { PolicyListener } from "./PolicyListener";
import { PolicyVisitor } from "./PolicyVisitor";


export class PolicyParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly BEFORE = 14;
	public static readonly BETWEEN = 15;
	public static readonly NEWLINE = 16;
	public static readonly QUOTED_STRING = 17;
	public static readonly WS = 18;
	public static readonly ANYUSER = 19;
	public static readonly ANYTENANCY = 20;
	public static readonly ENDORSE = 21;
	public static readonly ALLOW = 22;
	public static readonly DENY = 23;
	public static readonly DEFINE = 24;
	public static readonly RESOURCE = 25;
	public static readonly TO = 26;
	public static readonly OF = 27;
	public static readonly IN = 28;
	public static readonly WHERE = 29;
	public static readonly WITH = 30;
	public static readonly DYNAMICGROUP = 31;
	public static readonly GROUP = 32;
	public static readonly SERVICE = 33;
	public static readonly COMPARTMENT = 34;
	public static readonly TENANCY = 35;
	public static readonly READ = 36;
	public static readonly INSPECT = 37;
	public static readonly MANAGE = 38;
	public static readonly ASSOCIATE = 39;
	public static readonly ADMIT = 40;
	public static readonly USE = 41;
	public static readonly ANY = 42;
	public static readonly AND = 43;
	public static readonly ALL = 44;
	public static readonly AS = 45;
	public static readonly ID = 46;
	public static readonly HCL_VAR = 47;
	public static readonly WORD = 48;
	public static readonly RULE_policy = 0;
	public static readonly RULE_allowExpression = 1;
	public static readonly RULE_endorseExpression = 2;
	public static readonly RULE_defineExpression = 3;
	public static readonly RULE_admitExpression = 4;
	public static readonly RULE_denyExpression = 5;
	public static readonly RULE_endorseVerb = 6;
	public static readonly RULE_verb = 7;
	public static readonly RULE_permissionList = 8;
	public static readonly RULE_scope = 9;
	public static readonly RULE_endorseScope = 10;
	public static readonly RULE_subject = 11;
	public static readonly RULE_groupSubject = 12;
	public static readonly RULE_resourceSubject = 13;
	public static readonly RULE_serviceSubject = 14;
	public static readonly RULE_groupName = 15;
	public static readonly RULE_resourceSubjectId = 16;
	public static readonly RULE_serviceSubjectId = 17;
	public static readonly RULE_groupID = 18;
	public static readonly RULE_dynamicGroupSubject = 19;
	public static readonly RULE_tenancySubject = 20;
	public static readonly RULE_definedSubject = 21;
	public static readonly RULE_defined = 22;
	public static readonly RULE_resource = 23;
	public static readonly RULE_condition = 24;
	public static readonly RULE_functionCall = 25;
	public static readonly RULE_argumentList = 26;
	public static readonly RULE_argument = 27;
	public static readonly RULE_comparison = 28;
	public static readonly RULE_variable = 29;
	public static readonly RULE_operator = 30;
	public static readonly RULE_value = 31;
	public static readonly RULE_valueList = 32;
	public static readonly RULE_timeWindow = 33;
	public static readonly RULE_comparisonList = 34;
	public static readonly RULE_logicalCombine = 35;
	public static readonly RULE_patternMatch = 36;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"policy", "allowExpression", "endorseExpression", "defineExpression", 
		"admitExpression", "denyExpression", "endorseVerb", "verb", "permissionList", 
		"scope", "endorseScope", "subject", "groupSubject", "resourceSubject", 
		"serviceSubject", "groupName", "resourceSubjectId", "serviceSubjectId", 
		"groupID", "dynamicGroupSubject", "tenancySubject", "definedSubject", 
		"defined", "resource", "condition", "functionCall", "argumentList", "argument", 
		"comparison", "variable", "operator", "value", "valueList", "timeWindow", 
		"comparisonList", "logicalCombine", "patternMatch",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'{'", "','", "'}'", "':'", "'/'", "'''", "'('", "')'", "'.'", 
		"'='", "'!'", "'*/'", "'/*'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"BEFORE", "BETWEEN", "NEWLINE", "QUOTED_STRING", "WS", "ANYUSER", "ANYTENANCY", 
		"ENDORSE", "ALLOW", "DENY", "DEFINE", "RESOURCE", "TO", "OF", "IN", "WHERE", 
		"WITH", "DYNAMICGROUP", "GROUP", "SERVICE", "COMPARTMENT", "TENANCY", 
		"READ", "INSPECT", "MANAGE", "ASSOCIATE", "ADMIT", "USE", "ANY", "AND", 
		"ALL", "AS", "ID", "HCL_VAR", "WORD",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PolicyParser._LITERAL_NAMES, PolicyParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return PolicyParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Policy.g4"; }

	// @Override
	public get ruleNames(): string[] { return PolicyParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return PolicyParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PolicyParser._ATN, this);
	}
	// @RuleVersion(0)
	public policy(): PolicyContext {
		let _localctx: PolicyContext = new PolicyContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PolicyParser.RULE_policy);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 79;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 79;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case PolicyParser.ALLOW:
					{
					this.state = 74;
					this.allowExpression();
					}
					break;
				case PolicyParser.DENY:
					{
					this.state = 75;
					this.denyExpression();
					}
					break;
				case PolicyParser.ENDORSE:
					{
					this.state = 76;
					this.endorseExpression();
					}
					break;
				case PolicyParser.DEFINE:
					{
					this.state = 77;
					this.defineExpression();
					}
					break;
				case PolicyParser.ADMIT:
					{
					this.state = 78;
					this.admitExpression();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 81;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (((((_la - 21)) & ~0x1F) === 0 && ((1 << (_la - 21)) & ((1 << (PolicyParser.ENDORSE - 21)) | (1 << (PolicyParser.ALLOW - 21)) | (1 << (PolicyParser.DENY - 21)) | (1 << (PolicyParser.DEFINE - 21)) | (1 << (PolicyParser.ADMIT - 21)))) !== 0));
			this.state = 83;
			this.match(PolicyParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public allowExpression(): AllowExpressionContext {
		let _localctx: AllowExpressionContext = new AllowExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, PolicyParser.RULE_allowExpression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 85;
			this.match(PolicyParser.ALLOW);
			this.state = 86;
			this.subject();
			this.state = 97;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				{
				this.state = 88;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PolicyParser.TO) {
					{
					this.state = 87;
					this.match(PolicyParser.TO);
					}
				}

				this.state = 90;
				this.verb();
				this.state = 91;
				this.resource();
				}
				break;

			case 2:
				{
				this.state = 94;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PolicyParser.TO) {
					{
					this.state = 93;
					this.match(PolicyParser.TO);
					}
				}

				this.state = 96;
				this.permissionList();
				}
				break;
			}
			this.state = 99;
			this.match(PolicyParser.IN);
			this.state = 100;
			this.scope();
			this.state = 103;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PolicyParser.WHERE) {
				{
				this.state = 101;
				this.match(PolicyParser.WHERE);
				this.state = 102;
				this.condition();
				}
			}

			this.state = 106;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PolicyParser.NEWLINE) {
				{
				this.state = 105;
				this.match(PolicyParser.NEWLINE);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public endorseExpression(): EndorseExpressionContext {
		let _localctx: EndorseExpressionContext = new EndorseExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, PolicyParser.RULE_endorseExpression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 108;
			this.match(PolicyParser.ENDORSE);
			this.state = 109;
			this.subject();
			this.state = 118;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				{
				this.state = 110;
				this.match(PolicyParser.TO);
				this.state = 111;
				this.endorseVerb();
				this.state = 112;
				this.resource();
				}
				break;

			case 2:
				{
				this.state = 115;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PolicyParser.TO) {
					{
					this.state = 114;
					this.match(PolicyParser.TO);
					}
				}

				this.state = 117;
				this.permissionList();
				}
				break;
			}
			this.state = 120;
			this.match(PolicyParser.IN);
			this.state = 128;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				{
				this.state = 121;
				this.endorseScope();
				}
				break;

			case 2:
				{
				{
				this.state = 122;
				this.scope();
				this.state = 123;
				this.match(PolicyParser.WITH);
				this.state = 124;
				this.resource();
				this.state = 125;
				this.match(PolicyParser.IN);
				this.state = 126;
				this.endorseScope();
				}
				}
				break;
			}
			this.state = 132;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PolicyParser.WHERE) {
				{
				this.state = 130;
				this.match(PolicyParser.WHERE);
				this.state = 131;
				this.condition();
				}
			}

			this.state = 135;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PolicyParser.NEWLINE) {
				{
				this.state = 134;
				this.match(PolicyParser.NEWLINE);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public defineExpression(): DefineExpressionContext {
		let _localctx: DefineExpressionContext = new DefineExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, PolicyParser.RULE_defineExpression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			this.match(PolicyParser.DEFINE);
			this.state = 138;
			this.definedSubject();
			this.state = 139;
			this.match(PolicyParser.AS);
			this.state = 140;
			this.defined();
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PolicyParser.NEWLINE) {
				{
				this.state = 141;
				this.match(PolicyParser.NEWLINE);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public admitExpression(): AdmitExpressionContext {
		let _localctx: AdmitExpressionContext = new AdmitExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PolicyParser.RULE_admitExpression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 144;
			this.match(PolicyParser.ADMIT);
			this.state = 145;
			this.subject();
			this.state = 148;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PolicyParser.OF) {
				{
				this.state = 146;
				this.match(PolicyParser.OF);
				this.state = 147;
				this.endorseScope();
				}
			}

			this.state = 158;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 15, this._ctx) ) {
			case 1:
				{
				this.state = 150;
				this.match(PolicyParser.TO);
				this.state = 151;
				this.endorseVerb();
				this.state = 152;
				this.resource();
				}
				break;

			case 2:
				{
				this.state = 155;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PolicyParser.TO) {
					{
					this.state = 154;
					this.match(PolicyParser.TO);
					}
				}

				this.state = 157;
				this.permissionList();
				}
				break;
			}
			this.state = 160;
			this.match(PolicyParser.IN);
			this.state = 161;
			this.scope();
			this.state = 167;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PolicyParser.WITH) {
				{
				this.state = 162;
				this.match(PolicyParser.WITH);
				this.state = 163;
				this.resource();
				this.state = 164;
				this.match(PolicyParser.IN);
				this.state = 165;
				this.endorseScope();
				}
			}

			this.state = 171;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PolicyParser.WHERE) {
				{
				this.state = 169;
				this.match(PolicyParser.WHERE);
				this.state = 170;
				this.condition();
				}
			}

			this.state = 174;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PolicyParser.NEWLINE) {
				{
				this.state = 173;
				this.match(PolicyParser.NEWLINE);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public denyExpression(): DenyExpressionContext {
		let _localctx: DenyExpressionContext = new DenyExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, PolicyParser.RULE_denyExpression);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 176;
			this.match(PolicyParser.DENY);
			this.state = 201;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PolicyParser.ADMIT:
				{
				this.state = 177;
				this.admitExpression();
				}
				break;
			case PolicyParser.ENDORSE:
				{
				this.state = 178;
				this.endorseExpression();
				}
				break;
			case PolicyParser.ANYUSER:
			case PolicyParser.RESOURCE:
			case PolicyParser.DYNAMICGROUP:
			case PolicyParser.GROUP:
			case PolicyParser.SERVICE:
				{
				this.state = 179;
				this.subject();
				this.state = 190;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 21, this._ctx) ) {
				case 1:
					{
					this.state = 181;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === PolicyParser.TO) {
						{
						this.state = 180;
						this.match(PolicyParser.TO);
						}
					}

					this.state = 183;
					this.verb();
					this.state = 184;
					this.resource();
					}
					break;

				case 2:
					{
					this.state = 187;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === PolicyParser.TO) {
						{
						this.state = 186;
						this.match(PolicyParser.TO);
						}
					}

					this.state = 189;
					this.permissionList();
					}
					break;
				}
				this.state = 192;
				this.match(PolicyParser.IN);
				this.state = 193;
				this.scope();
				this.state = 196;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PolicyParser.WHERE) {
					{
					this.state = 194;
					this.match(PolicyParser.WHERE);
					this.state = 195;
					this.condition();
					}
				}

				this.state = 199;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PolicyParser.NEWLINE) {
					{
					this.state = 198;
					this.match(PolicyParser.NEWLINE);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public endorseVerb(): EndorseVerbContext {
		let _localctx: EndorseVerbContext = new EndorseVerbContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, PolicyParser.RULE_endorseVerb);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 205;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PolicyParser.READ:
			case PolicyParser.INSPECT:
			case PolicyParser.MANAGE:
			case PolicyParser.USE:
				{
				this.state = 203;
				this.verb();
				}
				break;
			case PolicyParser.ASSOCIATE:
				{
				this.state = 204;
				this.match(PolicyParser.ASSOCIATE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public verb(): VerbContext {
		let _localctx: VerbContext = new VerbContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, PolicyParser.RULE_verb);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 207;
			_la = this._input.LA(1);
			if (!(((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & ((1 << (PolicyParser.READ - 36)) | (1 << (PolicyParser.INSPECT - 36)) | (1 << (PolicyParser.MANAGE - 36)) | (1 << (PolicyParser.USE - 36)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public permissionList(): PermissionListContext {
		let _localctx: PermissionListContext = new PermissionListContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, PolicyParser.RULE_permissionList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 209;
			this.match(PolicyParser.T__0);
			this.state = 210;
			this.match(PolicyParser.WORD);
			this.state = 215;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PolicyParser.T__1) {
				{
				{
				this.state = 211;
				this.match(PolicyParser.T__1);
				this.state = 212;
				this.match(PolicyParser.WORD);
				}
				}
				this.state = 217;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 218;
			this.match(PolicyParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public scope(): ScopeContext {
		let _localctx: ScopeContext = new ScopeContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, PolicyParser.RULE_scope);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 233;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PolicyParser.COMPARTMENT:
				{
				{
				this.state = 220;
				this.match(PolicyParser.COMPARTMENT);
				this.state = 222;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PolicyParser.ID) {
					{
					this.state = 221;
					this.match(PolicyParser.ID);
					}
				}

				}
				this.state = 224;
				_la = this._input.LA(1);
				if (!(_la === PolicyParser.HCL_VAR || _la === PolicyParser.WORD)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 229;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === PolicyParser.T__3) {
					{
					{
					this.state = 225;
					this.match(PolicyParser.T__3);
					this.state = 226;
					_la = this._input.LA(1);
					if (!(_la === PolicyParser.HCL_VAR || _la === PolicyParser.WORD)) {
					this._errHandler.recoverInline(this);
					} else {
						if (this._input.LA(1) === Token.EOF) {
							this.matchedEOF = true;
						}

						this._errHandler.reportMatch(this);
						this.consume();
					}
					}
					}
					this.state = 231;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			case PolicyParser.TENANCY:
				{
				this.state = 232;
				this.match(PolicyParser.TENANCY);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public endorseScope(): EndorseScopeContext {
		let _localctx: EndorseScopeContext = new EndorseScopeContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, PolicyParser.RULE_endorseScope);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 238;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PolicyParser.ANYTENANCY:
				{
				this.state = 235;
				this.match(PolicyParser.ANYTENANCY);
				}
				break;
			case PolicyParser.TENANCY:
				{
				this.state = 236;
				this.match(PolicyParser.TENANCY);
				this.state = 237;
				_la = this._input.LA(1);
				if (!(_la === PolicyParser.HCL_VAR || _la === PolicyParser.WORD)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}
